--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<li><a href="#skills" onclick="toggle();">Skills</a></li>
 			<li><a href="#projects" onclick="toggle();">Projects</a></li>
 			<li><a href="#contact" onclick="toggle();">Contact</a></li>
-			<li><a target="_blank" href="https://drive.google.com/file/d/1GWzWacCF_ClveL8Zd27qdJIgoTq7F1BM/view?usp=sharing" >Resume</a></li>
+			<li><a target="_blank" href="https://drive.google.com/file/d/1f54Qrh2YA76TKBun4BX0Zvq0O-SXeey7/view?usp=sharing" >Resume</a></li>
 		</ul>
 	</header>
 	<section class="banner" id="home">
@@ -36,7 +36,7 @@
 		<div class="content">
 			<div class="contentBx w50">
 				<h3>I am Mechanical Engineer from IIT Madras.</h3>
-				<p>I am a Mechanical Engineer pursuing a Dual-degree with majoring in Mechanical Engineering.<br><br>
+				<p>I am a Mechanical Engineer pursuing a Dual-degree with Bachelors in Mechanical Engineering and Masters in Data Sciences.<br><br>
 			    I have a great passion in working in the fields of Artificial Intelligence and Robotics.I have a good experience using CAD and have a great passion for developing robots that help to serve society.</p>
 			</div>
 			<div class="w50">
@@ -85,6 +85,11 @@
 			<p>These are my projects.</p>
 		</div>		
 		<div class="content">
+			<div class="projectsBx">
+				<img src="Images\micromouse.jpg">
+				<h2>Loan Default Prediction</h2>
+				<p>Performed Classification of loan defaulting using Extreme Gradient Boosting Alogrithm and achieved an accuracy of 96% over the dataset from American Express Website.</p>
+			</div>
 			<div class="projectsBx">
 				<img src="Images\micromouse.jpg">
 				<h2>Micromouse Bot</h2>
