--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 		</div>		
 		<div class="content">
 			<div class="projectsBx">
-				<img src="Images\micromouse.jpg">
+				<img src="Images\Loan.jpg">
 				<h2>Loan Default Prediction</h2>
 				<p>Performed Classification of loan defaulting using Extreme Gradient Boosting Alogrithm and achieved an accuracy of 96% over the dataset from American Express Website.</p>
 			</div>
